--- a/arch/arm/boot/dts/ntc-gr8-crumb.dts
+++ b/arch/arm/boot/dts/ntc-gr8-crumb.dts
@@ -100,6 +100,25 @@
 	status = "okay";
 };
 
+&cpu0 {
+	/*
+	 * The based on the regulat CHIP with simplified cooling things
+	 */
+    clock-latency = <244144>;
+    operating-points = <
+		/* kHz    uV */
+        1008000   1400000
+        912000    1350000
+        864000    1300000
+        624000    1200000
+        576000    1200000
+        432000    1200000
+     >;
+    #cooling-cells = <2>;
+    cooling-min-level = <0>;
+    cooling-max-level = <5>;
+};
+
 &ehci0 {
 	status = "okay";
 };
