--- a/arch/arm/boot/dts/ntc-gr8-crumb.dts
+++ b/arch/arm/boot/dts/ntc-gr8-crumb.dts
@@ -74,6 +74,7 @@
             label = "chip:white:status";
             gpios = <&axp_gpio 2 GPIO_ACTIVE_HIGH>;
             default-state = "on";
+	    linux,default-trigger = "heartbeat";
         };
     };
 
